syntax = "proto2";
package BlitzMessage;

option java_package = "com.blitzhere.BlitzMessage";
option java_generic_services = true;

import "objectivec-descriptor.proto";
option (google.protobuf.objectivec_file_options).package = "";
option (google.protobuf.objectivec_file_options).class_prefix = "B";
option (google.protobuf.objectivec_file_options).relax_camel_case = true;


import "Types.proto";
//----------------------------------------------------------------------------------------
//
//                                                                                Payments
//
//----------------------------------------------------------------------------------------


enum CardStatus {
    CSUnknown   = 0;
    CSDefault   = 1;
    CSStandard  = 2;
    CSDeleted   = 3;
}


message CardInfo {
  optional CardStatus   cardStatus      = 1;
  optional string       cardHolderName  = 2;
  optional string       memoText        = 3;
  optional string       brand           = 4;
  optional string       last4           = 5;
  optional int32        expireMonth     = 6;
  optional int32        expireYear      = 7;
  optional string       token           = 8;
}


message UserCardInfo {
  optional string         userID        = 1;
  repeated CardInfo       cardInfo      = 2;
}


enum ChargeStatus {
    ChargeUnknown   = 0;
    CSDeclined      = 1;
    CSPreauthorized = 2;
    CSCharged       = 3;
}


message Charge {
  optional string       chargeID        = 1;
  optional Timestamp    timestamp       = 2;
  optional ChargeStatus chargeStatus    = 3;
  optional string       payerID         = 4;
  optional string       payeeID         = 5;
  optional string       conversationID  = 6;
  optional string       memoText        = 7;
  optional string       amount          = 8;
  optional string       currency        = 9;
  optional string       processorReason = 10;
}



